aggiunta funzione ottenimento batteria
