# src/app/routes/houseRoutes.js
@@ -9,5 +9,7 @@ router.put('/:id', houseController.updateHouse);
 router.delete('/:id', houseController.deleteHouse);
 router.get('/:id/consumption-stats', houseController.getHouseConsumptionStats);
 router.get('/:id/production-stats', houseController.getHouseProductionStats);
+router.get('/:id/battery/latest', houseController.getLatestBatteryLevel);
+
 
 module.exports = router;
